[tool.poetry]
name = "flashy"
version = "0.1.0"
description = "A simple flashcard CLI"
authors = ["Adesh Kadambi <adeshkadambi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlmodel = "^0.0.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
